--- a/src/app/shared/featured/featured.component.html
+++ b/src/app/shared/featured/featured.component.html
@@ -1,6 +1,6 @@
 <div class="card" style="width: 18rem;">
     <div class="card-header text-center">
-      <h4>أخبار</h4>
+      <h4>أخبار مختارة</h4>
     </div>
     <ul class="list-group text-right">
       <a class="list-group-item list-group-item-action" *ngFor="let item of features" [routerLink]= "['/news-details', item.ID]">{{item.Name}}</a>
