--- a/src/app/shared/top/top.component.html
+++ b/src/app/shared/top/top.component.html
@@ -1,6 +1,6 @@
 <div class="card" style="width: 18rem;">
     <div class="card-header text-center">
-      <h4>أخبار عاجلة</h4>
+      <h4>آخر الأخبار</h4>
     </div>
     <div class="list-group text-right" >
       <a class="list-group-item list-group-item-action" *ngFor="let item of topNews" [routerLink]="['/news-details', item.ID]">{{item.Name}}</a>
